pkg/lang/testdata/ub/config/valid/input-number-and-bool.ub
inputs: { size: 5, spot: true }
