pkg/lang/testdata/ub/config/invalid/state-duplicate-backend.ub
state: { @backend: local, @backend: local }
